unpackaged/main/default/objects/Lead/fields/Dialer_Status__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Status__c</fullName>
    <label>Dialer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDROP</fullName>
            </value>
            <value>
                <fullName>SOUNDQ</fullName>
            </value>
            <value>
                <fullName>PU</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NIWRG</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>CONGST</fullName>
            </value>
            <value>
                <fullName>QOUT</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>QLOUT</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>CBHOLD</fullName>
            </value>
            <value>
                <fullName>DONEM</fullName>
            </value>
            <value>
                <fullName>DEC</fullName>
            </value>
            <value>
                <fullName>HNDOFF</fullName>
            </value>
            <value>
                <fullName>APPSNT</fullName>
            </value>
            <value>
                <fullName>APPFXD</fullName>
            </value>
            <value>
                <fullName>SNDINF</fullName>
            </value>
            <value>
                <fullName>APPRCV</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>FWLLUP</fullName>
            </value>
            <value>
                <fullName>LRERR</fullName>
            </value>
            <value>
                <fullName>DISPO</fullName>
            </value>
            <value>
                <fullName>XFER</fullName>
            </value>
            <value>
                <fullName>DNCL</fullName>
            </value>
            <value>
                <fullName>OOB</fullName>
            </value>
            <value>
                <fullName>INCALL</fullName>
            </value>
            <value>
                <fullName>AFTHRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>