unpackaged/main/default/objects/Lead/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>TextArea</type>
</CustomField>