unpackaged/main/default/objects/Lead/fields/Disposition_Status__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Status__c</fullName>
    <label>Disposition Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>