unpackaged/main/default/objects/Lead/fields/DNC_Status__c.field-meta.xml
<CustomField>
    <fullName>DNC_Status__c</fullName>
    <formula>IF( DoNotCall == True, IMAGE("/servlet/servlet.FileDownload?file=0151M00000QWjPh", "Do Not Calll", 40, 200), '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNC Status</label>
    <type>Text</type>
</CustomField>