unpackaged/main/default/objects/Lead/fields/Do_Not_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Date_Time__c</fullName>
    <label>Do Not Call - Date Time</label>
    <type>DateTime</type>
</CustomField>