unpackaged/main/default/objects/Lead/fields/Do_Not_Call_Note__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Note__c</fullName>
    <label>Do Not Call - Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>