unpackaged/main/default/objects/Lead/fields/Dupe__c.field-meta.xml
<CustomField>
    <fullName>Dupe__c</fullName>
    <formula>FirstName +  LastName +   Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dupe</label>
    <type>Text</type>
</CustomField>