unpackaged/main/default/objects/Lead/fields/eFax__c.field-meta.xml
<CustomField>
    <fullName>eFax__c</fullName>
    <description>This field will be used for efax. This field will be auto populated by the fax number along with@rapidfax.com</description>
    <inlineHelpText>This field will be auto populated by the fax along with@rapidfax.com</inlineHelpText>
    <label>eFax</label>
    <type>Email</type>
</CustomField>