unpackaged/main/default/objects/Lead/fields/Email_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Last_Name__c</fullName>
    <formula>LastName + " - " + Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email + Last Name</label>
    <type>Text</type>
</CustomField>