unpackaged/main/default/objects/Lead/fields/Employee_Size__c.field-meta.xml
<CustomField>
    <fullName>Employee_Size__c</fullName>
    <label>Employee Size</label>
    <length>40</length>
    <type>Text</type>
</CustomField>