unpackaged/main/default/objects/Lead/fields/Existing_Positions__c.field-meta.xml
<CustomField>
    <fullName>Existing_Positions__c</fullName>
    <description>Input here any existing loans/mca/advances/positions the merchant is currently paying</description>
    <inlineHelpText>Input here any existing loans/mca/advances/positions the merchant is currently paying</inlineHelpText>
    <label>Existing Positions</label>
    <type>TextArea</type>
</CustomField>