unpackaged/main/default/objects/Lead/fields/Federal_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID__c</fullName>
    <label>Federal Tax ID #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>