unpackaged/main/default/objects/Lead/fields/Filing_Day__c.field-meta.xml
<CustomField>
    <fullName>Filing_Day__c</fullName>
    <label>Filing Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>