unpackaged/main/default/objects/Lead/fields/Filing_Month__c.field-meta.xml
<CustomField>
    <fullName>Filing_Month__c</fullName>
    <label>Filing Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>