unpackaged/main/default/objects/Lead/fields/Filing_Year__c.field-meta.xml
<CustomField>
    <fullName>Filing_Year__c</fullName>
    <label>Filing Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>