unpackaged/main/default/objects/Lead/fields/Financing_Type__c.field-meta.xml
<CustomField>
    <fullName>Financing_Type__c</fullName>
    <label>Financing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Line</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>Not Sure Yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>