unpackaged/main/default/objects/Lead/fields/Five9_Priority_Number__c.field-meta.xml
<CustomField>
    <fullName>Five9_Priority_Number__c</fullName>
    <label>Five9 Priority Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>