unpackaged/main/default/objects/Lead/fields/Form_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Form_Step_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Step 1</label>
    <type>Checkbox</type>
</CustomField>