unpackaged/main/default/objects/Lead/fields/Form_Step_2__c.field-meta.xml
<CustomField>
    <fullName>Form_Step_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Step 2</label>
    <type>Checkbox</type>
</CustomField>