unpackaged/main/default/objects/Lead/fields/Frequencey__c.field-meta.xml
<CustomField>
    <fullName>Frequencey__c</fullName>
    <label>Frequencey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>