unpackaged/main/default/objects/Lead/fields/Full_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Id</label>
    <type>Text</type>
</CustomField>