unpackaged/main/default/objects/Lead/fields/Full_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_2__c</fullName>
    <label>First Name(2)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>