unpackaged/main/default/objects/Lead/fields/Gatekeeper__c.field-meta.xml
<CustomField>
    <fullName>Gatekeeper__c</fullName>
    <description>Input Here the name of the gatekeeper</description>
    <inlineHelpText>Input Here the name of the gatekeeper</inlineHelpText>
    <label>Gatekeeper</label>
    <length>50</length>
    <type>Text</type>
</CustomField>