unpackaged/main/default/objects/Lead/fields/Home_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_1__c</fullName>
    <label>Home Phone #(1)</label>
    <type>Phone</type>
</CustomField>