unpackaged/main/default/objects/Lead/fields/Home_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_2__c</fullName>
    <label>Home Phone #(2)</label>
    <type>Phone</type>
</CustomField>