unpackaged/main/default/objects/Lead/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <formula>ISPICKVAL( Status , "Closed - Can't Reach") ||
 ISPICKVAL( Status , 'Closed - Not Interested Yet') ||
 ISPICKVAL( Status , 'Closed - Unqualified') ||
 ISPICKVAL( Status , 'Closed - Bad Lead')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>