unpackaged/main/default/objects/Lead/fields/Is_Fresh_Leads__c.field-meta.xml
<CustomField>
    <fullName>Is_Fresh_Leads__c</fullName>
    <formula>Campaign__r.Name = 'Enablement Data 062019' || Campaign__r.Name = "UCC_071019"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Fresh Leads</label>
    <type>Checkbox</type>
</CustomField>