unpackaged/main/default/objects/Lead/fields/Is_the_Business_Property_Leased_Owned__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Business_Property_Leased_Owned__c</fullName>
    <label>Is the Business Property Leased/Owned?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leased/Owned</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>