unpackaged/main/default/objects/Lead/fields/IsEmcForm__c.field-meta.xml
<CustomField>
    <fullName>IsEmcForm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEmcForm</label>
    <type>Checkbox</type>
</CustomField>