unpackaged/main/default/objects/Lead/fields/ISO__c.field-meta.xml
<CustomField>
    <fullName>ISO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISO</label>
    <referenceTo>ISO__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>