unpackaged/main/default/objects/Lead/fields/isQualified__c.field-meta.xml
<CustomField>
    <fullName>isQualified__c</fullName>
    <formula>IF(AND( NOT( TEXT(Status) == 'Closed - Unqualified') , NOT( TEXT(Status) == 'Closed - Bad Lead')), 1, 0)</formula>
    <label>isQualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>