unpackaged/main/default/objects/Lead/fields/Last_Contact_on_Dialer__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_on_Dialer__c</fullName>
    <label>Last Contact on Dialer</label>
    <type>TextArea</type>
</CustomField>