unpackaged/main/default/objects/Lead/fields/Last_Feed_Content__c.field-meta.xml
<CustomField>
    <fullName>Last_Feed_Content__c</fullName>
    <label>Last Feed Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>