unpackaged/main/default/objects/Lead/fields/Last_Feed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Feed_DateTime__c</fullName>
    <label>Last Feed DateTime</label>
    <type>DateTime</type>
</CustomField>