unpackaged/main/default/objects/Lead/fields/Last_Feed_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Feed_Id__c</fullName>
    <label>Last Feed Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>