unpackaged/main/default/objects/Lead/fields/Last_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_1__c</fullName>
    <label>Last Name(1)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>