unpackaged/main/default/objects/Lead/fields/Last_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_2__c</fullName>
    <label>Last Name(2)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>