unpackaged/main/default/objects/Lead/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <formula>IF( !IsConverted &amp;&amp; !CONTAINS(Text(Status),'Closed')
,IF(IF(Days_Since_Last_Activity__c &lt;&gt; 0, Days_Since_Last_Activity__c,  Days_From_Creation__c) &gt;= 9.5
,IF(IF(Days_Since_Last_Activity__c &lt;&gt; 0, Days_Since_Last_Activity__c,  Days_From_Creation__c)  &lt; 19.5
,IMAGE("/servlet/servlet.FileDownload?file=0151M00000QWjnP", 'Orange Flag', 40, 40)
,IMAGE("/servlet/servlet.FileDownload?file=0151M00000QWjnK", 'Red Flag', 40, 40))
,'')
,'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Activity Warning</label>
    <type>Text</type>
</CustomField>