unpackaged/main/default/objects/Lead/fields/Lead_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Code__c</fullName>
    <label>Lead Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>