unpackaged/main/default/objects/Lead/fields/Lead_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Code_Description__c</fullName>
    <description>This will contain Description of the Campaign.</description>
    <label>Lead Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>