unpackaged/main/default/objects/Lead/fields/Lead_Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Date_Closed__c</fullName>
    <description>Date when Lead Status Is changed to Closed. This field will be updated by Workflow.</description>
    <inlineHelpText>Date when Lead Status Is changed to Closed.</inlineHelpText>
    <label>Lead Date Closed</label>
    <type>DateTime</type>
</CustomField>