unpackaged/main/default/objects/Lead/fields/Lead_Id_In_Dialer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id_In_Dialer__c</fullName>
    <label>Lead Id In Dialer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>