unpackaged/main/default/objects/Lead/fields/Lead_Id_In_Phone_Burner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id_In_Phone_Burner__c</fullName>
    <label>Lead Id In Phone Burner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>