unpackaged/main/default/objects/Lead/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Web Enquiry</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Online Application</fullName>
            </value>
            <value>
                <fullName>Lost Opportunity</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>