unpackaged/main/default/objects/Lead/fields/Legal_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Business_Name__c</fullName>
    <description>This field is mapped to the Legal Name on accounts object upon lead conversion</description>
    <label>Legal Business Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>