unpackaged/main/default/objects/Lead/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Legal name of business</description>
    <label>Legal Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>