unpackaged/main/default/objects/Lead/fields/List_Source__c.field-meta.xml
<CustomField>
    <fullName>List_Source__c</fullName>
    <label>List Source</label>
    <type>TextArea</type>
</CustomField>