unpackaged/main/default/objects/Lead/fields/Loan_Expected_Time__c.field-meta.xml
<CustomField>
    <fullName>Loan_Expected_Time__c</fullName>
    <label>Loan Expected Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asap</fullName>
            </value>
            <value>
                <fullName>Within A Week</fullName>
            </value>
            <value>
                <fullName>As Soon As Possible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>