unpackaged/main/default/objects/Lead/fields/Mail_CR_Code__c.field-meta.xml
<CustomField>
    <fullName>Mail_CR_Code__c</fullName>
    <description>This is info that we get with UCC lists purchased that can be used if we need to send information by regular mail</description>
    <label>Mail CR Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>