unpackaged/main/default/objects/Lead/fields/Mobile_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_1__c</fullName>
    <description>This field will be auto Populated from a workflow by the value of Cell Phone field.</description>
    <label>Mobile Phone #(1)</label>
    <type>Phone</type>
</CustomField>