unpackaged/main/default/objects/Lead/fields/Monday_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Monday_Item_ID__c</fullName>
    <label>Monday Item ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>