unpackaged/main/default/objects/Lead/fields/Monthly_Payment_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_if_applicable__c</fullName>
    <label>Monthly Payment (if applicable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>