unpackaged/main/default/objects/Lead/fields/Name_Detected_By__c.field-meta.xml
<CustomField>
    <fullName>Name_Detected_By__c</fullName>
    <label>Name Detected By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Twilio API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>