unpackaged/main/default/objects/Lead/fields/Next_Call_2__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_2__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Next Call</label>
    <type>Date</type>
</CustomField>