unpackaged/main/default/objects/Lead/fields/Next_Call__c.field-meta.xml
<CustomField>
    <fullName>Next_Call__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>show the next time to contact lead</description>
    <label>Next Call</label>
    <type>Date</type>
</CustomField>