unpackaged/main/default/objects/Lead/fields/Next_PB_ACT__c.field-meta.xml
<CustomField>
    <fullName>Next_PB_ACT__c</fullName>
    <description>Shows the next action date for phone burner</description>
    <label>Next PB Action</label>
    <type>Date</type>
</CustomField>