unpackaged/main/default/objects/Lead/fields/Old_status__c.field-meta.xml
<CustomField>
    <fullName>Old_status__c</fullName>
    <label>Old status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>