unpackaged/main/default/objects/Lead/fields/Opener_Name__c.field-meta.xml
<CustomField>
    <fullName>Opener_Name__c</fullName>
    <description>OPENER THAT SENT OUT THE APP</description>
    <label>Opener Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>