unpackaged/main/default/objects/Lead/fields/Original_Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Opp_Owner__c</fullName>
    <label>Original Opp Owner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>