unpackaged/main/default/objects/Lead/fields/Outside_Rep__c.field-meta.xml
<CustomField>
    <fullName>Outside_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If lead was given to an outside rep we put his info here</description>
    <label>Outside Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Contact)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>