unpackaged/main/default/objects/Lead/fields/Owe_funds_to_an_existing_Cash_Adv_Comp__c.field-meta.xml
<CustomField>
    <fullName>Owe_funds_to_an_existing_Cash_Adv_Comp__c</fullName>
    <label>Owe funds to an existing Cash Adv Comp?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>