unpackaged/main/default/objects/Lead/fields/Owner_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name_Text__c</fullName>
    <formula>Owner:User.FirstName &amp; ' ' &amp;  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name (Text)</label>
    <type>Text</type>
</CustomField>