unpackaged/main/default/objects/Lead/fields/Percent_of_Ownership_2__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Ownership_2__c</fullName>
    <label>% of Ownership(2)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>