unpackaged/main/default/objects/Lead/fields/Phone_Burner_Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Phone_Burner_Call_Result__c</fullName>
    <label>Phone Burner Call Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>