unpackaged/main/default/objects/Lead/fields/Phone_Burner_Next_Call__c.field-meta.xml
<CustomField>
    <fullName>Phone_Burner_Next_Call__c</fullName>
    <label>Phone Burner Next Call</label>
    <type>Date</type>
</CustomField>