unpackaged/main/default/objects/Lead/fields/Phone_Temp__c.field-meta.xml
<CustomField>
    <fullName>Phone_Temp__c</fullName>
    <externalId>true</externalId>
    <label>Phone Temp</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>