unpackaged/main/default/objects/Lead/fields/Phone_Type_Twilio__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type_Twilio__c</fullName>
    <label>Phone Type (Twilio)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>