unpackaged/main/default/objects/Lead/fields/Potential_Offer__c.field-meta.xml
<CustomField>
    <fullName>Potential_Offer__c</fullName>
    <description>This field will display the potential preapproval amount based on a predetermined calculation such as (15% of annual sales).</description>
    <formula>IF(ISBLANK(Annual_Gross_Sales__c) , 0, ((Annual_Gross_Sales__c  * 15 )/ 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This calculates potential approval amount based on a 15% of annual sales.</inlineHelpText>
    <label>Potential Offer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>