unpackaged/main/default/objects/Lead/fields/Prequalified__c.field-meta.xml
<CustomField>
    <fullName>Prequalified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prequalified</label>
    <type>Checkbox</type>
</CustomField>