unpackaged/main/default/objects/Lead/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Field will contain lead status prior to the current status.</description>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>