unpackaged/main/default/objects/Lead/fields/Primary_SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_SIC_Code__c</fullName>
    <description>SIC Codes</description>
    <label>Primary SIC Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>