unpackaged/main/default/objects/Lead/fields/Primary_SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>Primary_SIC_Description__c</fullName>
    <label>Primary SIC Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>