unpackaged/main/default/objects/Lead/fields/Purpose_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Funding__c</fullName>
    <label>Purpose of Funding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Pay Bills</fullName>
            </value>
            <value>
                <fullName>Marketing/Advertising</fullName>
            </value>
            <value>
                <fullName>New Equipment</fullName>
            </value>
            <value>
                <fullName>New Location</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>