unpackaged/main/default/objects/Lead/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This filed will contain the Contact who referred the Lead.</description>
    <inlineHelpText>The Contact who referred the Lead.</inlineHelpText>
    <label>Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Referred By)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>