unpackaged/main/default/objects/Lead/fields/Reminder_Email_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Error_Message__c</fullName>
    <label>Reminder Email Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>