unpackaged/main/default/objects/Lead/fields/Residence_Address1__c.field-meta.xml
<CustomField>
    <fullName>Residence_Address1__c</fullName>
    <label>Residence Address(1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>