unpackaged/main/default/objects/Lead/fields/Residence_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Residence_Address_2__c</fullName>
    <label>Residence Address(2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>