unpackaged/main/default/objects/Lead/fields/Sales_Force_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Force_ID__c</fullName>
    <description>Gives a unique ID number to each Lead</description>
    <displayFormat>ID-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Sales Force ID</label>
    <type>AutoNumber</type>
</CustomField>