unpackaged/main/default/objects/Lead/fields/SCE_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>SCE_Party_Name__c</fullName>
    <label>SCE Party Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>