unpackaged/main/default/objects/Lead/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <description>Used to pass over the search term used with Google adwords</description>
    <label>Search Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>