unpackaged/main/default/objects/Lead/fields/Secondary_SIC__c.field-meta.xml
<CustomField>
    <fullName>Secondary_SIC__c</fullName>
    <label>Secondary SIC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>