unpackaged/main/default/objects/Lead/fields/Secured_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Secured_Party_Name__c</fullName>
    <description>This is the current lender or funder that has an existing UCC against the business.</description>
    <inlineHelpText>This is the current lender or funder that has an existing UCC against the business.</inlineHelpText>
    <label>Secured Party Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>