unpackaged/main/default/objects/Lead/fields/Send_Abandoned_Form_Email_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_Abandoned_Form_Email_Date_Time__c</fullName>
    <formula>NOW() + 2*(1/24/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Abandoned Form Email Date Time</label>
    <type>DateTime</type>
</CustomField>